# internal/resourcesv1/writer.go
@@ -10,13 +10,12 @@ import (
 
 	"github.com/google/uuid"
 	"github.com/jackc/pgx/v5/pgtype"
-	"github.com/ooqls/go-auth/internal/corev1"
 	"github.com/ooqls/go-auth/internal/resourcesv1/datagen"
 )
 
 type Writer interface {
-	CreateResource(ctx context.Context, group, kind, name, description string) (*Resourcev1, error)
-	UpdateResource(ctx context.Context, id uuid.UUID, name, description *string) (*Resourcev1, error)
+	CreateResource(ctx context.Context, group, kind, name string) (*Resourcev1, error)
+	UpdateResource(ctx context.Context, group, kind, name string, newName string) (*Resourcev1, error)
 	DeleteResource(ctx context.Context, group, kind, name string) error
 	DeleteResourceById(ctx context.Context, id uuid.UUID) error
 }
@@ -31,48 +30,34 @@ func NewSQLWriter(db *datagen.Queries) Writer {
 	}
 }
 
-func (w *SQLWriter) CreateResource(ctx context.Context, group, kind, name, description string) (*Resourcev1, error) {
+func (w *SQLWriter) CreateResource(ctx context.Context, group, kind, name string) (*Resourcev1, error) {
 	res, err := w.query.CreateResource(ctx, datagen.CreateResourceParams{
-		ID:            uuid.New(),
-		ResourceKind:  kind,
-		ResourceGroup: group,
-		ResourceName:  name,
-		Description:   description,
-		CreatedAt:     pgtype.Timestamptz{Time: time.Now(), Valid: true},
-		UpdatedAt:     pgtype.Timestamptz{Time: time.Now(), Valid: true},
+		ID:        uuid.New(),
+		Name:      name,
+		Rgroup:    group,
+		Kind:      kind,
+		CreatedAt: pgtype.Timestamptz{Time: time.Now(), Valid: true},
+		UpdatedAt: pgtype.Timestamptz{Time: time.Now(), Valid: true},
 	})
 	if err != nil {
 		return nil, err
 	}
 
 	return &Resourcev1{
-		Object: corev1.Object{
-			Metadata: corev1.Metadata{
-				Group: res.ResourceGroup,
-				Kind:  res.ResourceKind,
-			},
-			Name: res.ResourceName,
-			Id:   res.ID,
-		},
-		Description: res.Description,
-		CreatedAt:   res.CreatedAt.Time,
-		UpdatedAt:   res.UpdatedAt.Time,
-	}, err
+		Id:        res.ID,
+		Name:      res.Name,
+		CreatedAt: res.CreatedAt.Time,
+		UpdatedAt: res.UpdatedAt.Time,
+	}, nil
 }
 
-func (w *SQLWriter) UpdateResource(ctx context.Context,
-	id uuid.UUID, name, description *string) (*Resourcev1, error) {
-	params := datagen.UpdateResourceParams{
-		ID: id,
-	}
-	if name != nil {
-		params.Name = *name
-	}
-	if description != nil {
-		params.Description = *description
-	}
-
-	res, err := w.query.UpdateResource(ctx, params)
+func (w *SQLWriter) UpdateResource(ctx context.Context, group, kind, name string, newName string) (*Resourcev1, error) {
+	res, err := w.query.UpdateResource(ctx, datagen.UpdateResourceParams{
+		Rgroup: group,
+		Kind:   kind,
+		Name:   name,
+		Name_2: newName,
+	})
 	if err != nil {
 		if errors.Is(err, sql.ErrNoRows) {
 			return nil, ErrNotFound
@@ -81,24 +66,18 @@ func (w *SQLWriter) UpdateResource(ctx context.Context,
 	}
 
 	return &Resourcev1{
-		Object: corev1.Object{
-			Metadata: corev1.Metadata{
-				Group: res.ResourceGroup,
-				Kind:  res.ResourceKind,
-			},
-			Id:   res.ID,
-			Name: res.ResourceName,
-		},
-		Description: res.Description,
-		CreatedAt:   res.CreatedAt.Time,
-		UpdatedAt:   res.UpdatedAt.Time,
+		Id:        res.ID,
+		Name:      res.Name,
+		CreatedAt: res.CreatedAt.Time,
+		UpdatedAt: res.UpdatedAt.Time,
 	}, nil
 }
+
 func (w *SQLWriter) DeleteResource(ctx context.Context, group, kind, name string) error {
 	err := w.query.DeleteResource(ctx, datagen.DeleteResourceParams{
-		ResourceName:  name,
-		ResourceGroup: group,
-		ResourceKind:  kind,
+		Name:   name,
+		Rgroup: group,
+		Kind:   kind,
 	})
 	if err != nil {
 		if errors.Is(err, sql.ErrNoRows) {
@@ -106,7 +85,6 @@ func (w *SQLWriter) DeleteResource(ctx context.Context, group, kind, name string
 		}
 		return err
 	}
-
 	return nil
 }
 
@@ -118,6 +96,5 @@ func (w *SQLWriter) DeleteResourceById(ctx context.Context, id uuid.UUID) error 
 		}
 		return err
 	}
-
 	return nil
 }
