# v1/resources/resourcesapi/docs/openapi.yaml
@@ -23,18 +23,12 @@ components:
         resource:
           $ref: "schemas.yaml#/components/schemas/Resource"
 paths:
-  /auth/resource/{name}/{group}/{kind}:
+  /auth/resource/{group}/{kind}/{name}:
     get:
       summary: Get a resource
       description: Get a resource
       operationId: getResource
       parameters:
-        - name: name
-          in: path
-          description: The name of the resource
-          required: true
-          schema:
-            type: string
         - name: group
           in: path
           description: The group of the resource
@@ -44,6 +38,12 @@ paths:
         - name: kind
           in: path
           description: The kind of the resource
+          required: true
+          schema:
+            type: string
+        - name: name
+          in: path
+          description: The name of the resource
           required: true
           schema:
             type: string
@@ -63,12 +63,6 @@ paths:
       description: Delete a resource
       operationId: deleteResource
       parameters:
-        - name: name
-          in: path
-          description: The name of the resource
-          required: true
-          schema:
-            type: string
         - name: group
           in: path
           description: The group of the resource
@@ -78,6 +72,12 @@ paths:
         - name: kind
           in: path
           description: The kind of the resource
+          required: true
+          schema:
+            type: string
+        - name: name
+          in: path
+          description: The name of the resource
           required: true
           schema:
             type: string
@@ -98,6 +98,18 @@ paths:
       description: Get all resources
       operationId: listResources
       parameters:
+        - name: group
+          in: query
+          description: The group of the resources
+          required: false
+          schema:
+            type: string
+        - name: kind
+          in: query
+          description: The kind of the resources
+          required: false
+          schema:
+            type: string
         - name: page
           in: query
           description: The page number
@@ -113,18 +125,6 @@ paths:
         - name: name
           in: query
           description: The name of the resource
-          required: false
-          schema:
-            type: string
-        - name: group
-          in: query
-          description: The group of the resource
-          required: false
-          schema:
-            type: string
-        - name: kind
-          in: query
-          description: The kind of the resource
           required: false
           schema:
             type: string
