# v1/resources/service.go
@@ -1,9 +1,9 @@
 package resources
 
 import (
+	"errors"
 	"fmt"
 
-	"github.com/google/uuid"
 	"github.com/ooqls/go-auth/internal/authorizationv1"
 	"github.com/ooqls/go-auth/internal/corev1"
 	"github.com/ooqls/go-auth/internal/datav1"
@@ -12,12 +12,14 @@ import (
 	"go.uber.org/zap"
 )
 
+var _ Service = &ServiceImpl{}
+
 type Service interface {
-	CreateResource(ctx authorizationv1.Context, group, kind, name string) (Resourcev1, error)
-	GetResource(ctx authorizationv1.Context, id resourceIdentifier) (Resourcev1, error)
-	UpdateResourceName(ctx authorizationv1.Context, id uuid.UUID, name string, description *string) (Resourcev1, error)
-	DeleteResource(ctx authorizationv1.Context, id resourceIdentifier) error
-	ListResources(ctx authorizationv1.Context, group, kind string, page, pageSize int32) ([]Resourcev1, error)
+	CreateResource(ctx *authorizationv1.Context, group, kind, name string) (*Resourcev1, error)
+	GetResource(ctx *authorizationv1.Context, group, kind, name string) (*Resourcev1, error)
+	GetResources(ctx *authorizationv1.Context, group, kind *string, page, pageSize int32) ([]Resourcev1, error)
+	UpdateResourceName(ctx *authorizationv1.Context, group, kind, name string, newName string) (*Resourcev1, error)
+	DeleteResource(ctx *authorizationv1.Context, group, kind, name string) error
 }
 
 type ServiceImpl struct {
@@ -26,7 +28,7 @@ type ServiceImpl struct {
 	ra authorizationv1.Authorizer
 }
 
-func NewServiceImpl(factory datav1.Factory) *ServiceImpl {
+func NewServiceImpl(factory datav1.Factory) Service {
 	return &ServiceImpl{
 		rw: factory.NewResourceWriter(),
 		rr: factory.NewResourceReader(),
@@ -34,37 +36,29 @@ func NewServiceImpl(factory datav1.Factory) *ServiceImpl {
 	}
 }
 
-func (s *ServiceImpl) CreateResource(ctx *authorizationv1.Context, group, kind, name, description string) (*Resourcev1, error) {
-	if err := s.ra.IsAuthorizedToPerformAction(ctx, authorizationv1.CreateAction, corev1.Object{
-		Metadata: corev1.Metadata{
-			Group: group,
-			Kind:  kind,
-		},
-		Name: name,
-	}); err != nil {
-		return nil, err
+func (s *ServiceImpl) CreateResource(ctx *authorizationv1.Context, group, kind, name string) (*Resourcev1, error) {
+	if err := s.ra.IsAuthorizedToPerformAction(ctx, authorizationv1.CreateAction, corev1.ToTargetString(corev1.Metadata{
+		Group: group,
+		Kind:  kind,
+	})); err != nil {
+		return nil, v1.ErrPermissionDenied(err, v1.M{"group": group, "kind": kind})
 	}
 
-	res, err := s.rw.CreateResource(ctx, group, kind, name, description)
+	res, err := s.rw.CreateResource(ctx, group, kind, name)
 	if err != nil {
-		return nil, err
+		return nil, v1.ErrInternal(err, v1.M{"group": group, "kind": kind, "name": name})
 	}
 
 	return res, nil
 }
 
 func (s *ServiceImpl) GetResource(ctx *authorizationv1.Context, group, kind, name string) (*Resourcev1, error) {
-	if err := s.ra.IsAuthorizedToPerformAction(ctx, authorizationv1.ReadAction, corev1.Object{
-		Metadata: corev1.Metadata{
-			Group: group,
-			Kind:  kind,
-		},
-		Name: name,
-	}); err != nil {
-		return nil, err
+	target := corev1.ToTargetString(corev1.Metadata{Group: group, Kind: kind})
+	if err := s.ra.IsAuthorizedToPerformAction(ctx, authorizationv1.ReadAction, target); err != nil {
+		return nil, v1.ErrPermissionDenied(err, v1.M{"group": group, "kind": kind, "name": name})
 	}
 
-	res, err := s.rr.GetResource(ctx, name, corev1.Metadata{Group: group, Kind: kind})
+	res, err := s.rr.GetResource(ctx, group, kind, name)
 	if err != nil {
 		return nil, err
 	}
@@ -72,38 +66,71 @@ func (s *ServiceImpl) GetResource(ctx *authorizationv1.Context, group, kind, nam
 	return res, nil
 }
 
-func (s *ServiceImpl) UpdateResourceName(ctx *authorizationv1.Context, id uuid.UUID, name string, description *string) (*Resourcev1, error) {
+func (s *ServiceImpl) UpdateResourceName(ctx *authorizationv1.Context, group, kind, name, newName string) (*Resourcev1, error) {
+	target := corev1.ToTargetString(corev1.Metadata{Group: group, Kind: kind})
+	if err := s.ra.IsAuthorizedToPerformAction(ctx, authorizationv1.UpdateAction, target); err != nil {
+		return nil, v1.ErrPermissionDenied(err, v1.M{
+			"group": group,
+			"kind":  kind,
+			"name":  name,
+		})
+	}
+
 	if err := s.rr.ClearCache(ctx); err != nil {
 		ctx.L().Warn("failed to clear reader cache", zap.Error(err))
 	}
 
-	res, err := s.rr.GetResourceByID(ctx, id)
+	res, err := s.rr.GetResource(ctx, group, kind, name)
 	if err != nil {
 		return nil, err
 	}
 
 	if res == nil {
-		return nil, v1.ErrPermissionDenied(fmt.Errorf("resource with id %s not found", id), v1.M{})
+		return nil, v1.ErrPermissionDenied(fmt.Errorf("resource not found"), v1.M{
+			"group": group,
+			"kind":  kind,
+			"name":  name,
+		})
 	}
 
-	if err := s.ra.IsAuthorizedToPerformAction(ctx, authorizationv1.UpdateAction, res.Object); err != nil {
-		return nil, err
-	}
-
-	res, err = s.rw.UpdateResource(ctx, id, &name, description)
+	res, err = s.rw.UpdateResource(ctx, group, kind, name, newName)
 	if err != nil {
-		return nil, err
+		if errors.Is(err, resourcesv1.ErrNotFound) {
+			return nil, v1.ErrNotFound(fmt.Errorf("resource not found"), v1.M{
+				"group": group,
+				"kind":  kind,
+				"name":  name,
+			})
+		}
+
+		return nil, v1.ErrInternal(err, v1.M{
+			"group": group,
+			"kind":  kind,
+			"name":  name,
+		})
 	}
 
 	return res, nil
 }
 
-func (s *ServiceImpl) DeleteResource(ctx *authorizationv1.Context, id uuid.UUID) error {
+func (s *ServiceImpl) DeleteResource(ctx *authorizationv1.Context, group, kind, name string) error {
+	if err := s.ra.IsAuthorizedToPerformAction(ctx, authorizationv1.DeleteAction, corev1.ToTargetString(corev1.Metadata{
+		Group: group,
+		Kind:  kind,
+	})); err != nil {
+		return v1.ErrPermissionDenied(err, v1.M{"group": group, "kind": kind, "name": name})
+	}
+
 	if err := s.rr.ClearCache(ctx); err != nil {
 		ctx.L().Warn("failed to clear reader cache", zap.Error(err))
 	}
 
-	return s.rw.DeleteResourceById(ctx, id)
+	err := s.rw.DeleteResource(ctx, group, kind, name)
+	if err != nil {
+		return v1.ErrInternal(err, v1.M{"group": group, "kind": kind, "name": name})
+	}
+
+	return nil
 }
 
 func (s *ServiceImpl) DeleteResourceByName(ctx *authorizationv1.Context, group, kind, name string) error {
@@ -113,11 +140,30 @@ func (s *ServiceImpl) DeleteResourceByName(ctx *authorizationv1.Context, group, 
 	return s.rw.DeleteResource(ctx, group, kind, name)
 }
 
-func (s *ServiceImpl) ListResources(ctx *authorizationv1.Context, group, kind string, page, pageSize int32) ([]Resourcev1, error) {
-	res, err := s.rr.GetResources(ctx, corev1.Metadata{Group: group, Kind: kind}, pageSize, (page-1)*pageSize)
-	if err != nil {
+func (s *ServiceImpl) GetResources(ctx *authorizationv1.Context, group, kind *string, page, pageSize int32) ([]Resourcev1, error) {
+	targetGroup := "*"
+	targetKind := "*"
+
+	if group != nil {
+		targetGroup = *group
+	}
+
+	if kind != nil {
+		targetKind = *kind
+	}
+
+	target := corev1.ToTargetString(corev1.Metadata{Group: targetGroup, Kind: targetKind})
+	if err := s.ra.IsAuthorizedToPerformAction(ctx, authorizationv1.ReadAction, target); err != nil {
 		return nil, err
 	}
 
-	return res, nil
+	switch {
+	case group != nil && kind != nil:
+		return s.rr.GetResourcesByGroupAndKind(ctx, *group, *kind, pageSize, (page-1)*pageSize)
+	case group != nil:
+		return s.rr.GetResourcesByGroup(ctx, *group, pageSize, (page-1)*pageSize)
+	default:
+		return s.rr.GetResources(ctx, pageSize, (page-1)*pageSize)
+	}
+
 }
